# mb_assignment

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  Readme.md  cmake_install.cmake
include/: HTTPClient.h  MollyAPIClient.h  WebSocketClient.h
src/: HTTPClient.cpp  MollyAPIClient.cpp  WebSocketClient.cpp  main.cpp
